<resources>
    <string name="app_name">Mountain Climbers</string>
    <string name="select_pack">SELECT PACK</string>
    <string name="nobody">Nobody</string>
    <string name="puzzle_mode">Puzzle mode</string>
    <string name="timed_mode">Timed mode</string>
    <string name="levels">Levels</string>
    <string name="play">Play</string>
    <string name="go">GO</string>
    <string name="settings">Settings</string>
    <string name="landscape_only">Landscape only</string>
    <string name="speed">Speed</string>
    <string name="climbers">Climbers</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="sign_out">Sign Out</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="are_you_sure_leave">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign in</string>
    <string name="level">Level</string>
    <string name="tutorial">Tutorial</string>
    <string name="youwin">YOU WIN!</string>
    <string name="stars2">GREAT!</string>
    <string name="stars3">PERFECT!</string>
    <string name="moves">Moves</string>
    <string name="newrecord">NEW RECORD!</string>
    <string name="error_reading_backup">Could not read backup</string>
    <string name="error_getting_backup">Error getting backup file</string>
    <string name="sign_in_for_achieve">You must sign in to view achievements</string>
    <string name="error_connecting_gpg">Could not connect to Google Play Games</string>
    <string name="sign_in_for_backup">You must sign in save your progress</string>
    <string name="error_connecting_drive">Could not connect to Google Drive</string>
    <string name="no_backups">You haven\'t saved any backups</string>
    <string name="error_generic">An error occurred</string>
    <string name="select_backup">Select backup</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_fail">Something went wrong. Backup unsuccessful</string>
    <string name="not_signed_in">You are not signed in</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="daily_puzzle">Daily Puzzle</string>
    <string name="tut_moving">Moving</string>
    <string name="tut_change_dir">Changing direction</string>
    <string name="tut_stay_together">Staying together</string>
    <string name="tut_aim">The goal</string>
    <string name="tut_hints">Using hints</string>
    <string name="tut_many_climbers">Many climbers</string>
</resources>
